--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
   </head>
   <body>
-    <h2>Bird Migration Flow Map</h2>
+    <h2>Bird Migration Flow Map - Paths that took more than 3 hours of flight duration</h2>
     <div id="vis"></div>
     <script type="text/javascript">
       vegaEmbed('#vis', 'flowmap.json');
