added conclusion and changed insights paragraphs.

--- a/index.html
+++ b/index.html
@@ -175,9 +175,13 @@
     <div class="graph-insights">
       <h4>Insights</h4>
       <p>
-        The flow map highlights how <strong>geese and cranes</strong> follow long, predictable north–south routes  
-        aligned with seasonal shifts, while <strong>swallows</strong> and smaller species tend to move regionally.  
-        Feeding-related migrations often span continents, while breeding journeys are more localized.
+        The migration reason strongly influences both the geographic routes and the flight duration of bird migrations. 
+        Birds migrating for climate change or feeding tend to travel longer distances across continents, 
+        showing wider dispersal between start and end coordinates, while breeding or predator avoidance migrations 
+        are typically shorter and more regional. Consequently, migrations driven by environmental pressures 
+        (e.g. climate change) exhibit longer flight durations and broader latitude shifts, reflecting the species’ 
+        adaptive response to large-scale habitat changes, whereas biological or threat-driven migrations 
+        are more time-efficient and localised.
       </p>
     </div>
 
@@ -202,9 +206,12 @@
     <div class="graph-insights">
       <h4>Insights</h4>
       <p>
-        Larger species like <strong>eagles</strong> and <strong>storks</strong> tend to travel farther, especially during breeding migrations.  
-        Smaller birds, such as <strong>warblers</strong>, show shorter, variable distances — likely due to habitat fragmentation  
-        and diverse feeding zones.
+        The migration reason has a clear influence on the flight distance across different species. 
+        Birds migrating due to climate change or feeding generally show greater variation and longer 
+        average flight distances, suggesting large-scale relocations in search of suitable environments 
+        or food sources. In contrast, breeding and predator avoidance migrations tend to have shorter, 
+        more consistent flight distances, indicating local or seasonal movements rather than extensive 
+        interregional travel.
       </p>
     </div>
 
@@ -228,9 +235,11 @@
     <div class="graph-insights">
       <h4>Insights</h4>
       <p>
-        Longer flights usually correspond to greater distances, showing clear species-level differences.  
-        <strong>Geese and cranes</strong> maintain long, efficient migrations, while <strong>warblers</strong> perform  
-        shorter, frequent flights — revealing distinct energy strategies.
+        There is a clear positive correlation between flight distance and flight duration, 
+        with birds that travel farther spending more time in the air. Birds migrating for climate change or 
+        feeding reasons generally cover longer distances more efficiently, showing slightly lower hours per 
+        kilometre travelled. In contrast, migrations driven by breeding or predator avoidance tend to be shorter 
+        and slower, indicating more frequent rest stops and localised movement patterns.  
       </p>
     </div>
 
@@ -254,9 +263,21 @@
     <div class="graph-insights">
       <h4>Insights</h4>
       <p>
-        Birds migrating to <strong>feed or avoid predators</strong> often travel in larger groups,  
-        while <strong>breeding migrations</strong> are more solitary or in pairs.  
-        This pattern suggests strong social coordination when collective survival benefits arise.
+        Flock size varies noticeably by migration reason, with larger groups observed during feeding and climate 
+        change migrations. These migrations likely promote collective movement for efficiency and survival over 
+        long distances. Meanwhile, breeding and predator avoidance migrations tend to occur in smaller flocks, 
+        reflecting more targeted and region-specific behaviours.
+      </p>
+    </div>
+
+      <h3>Conclusion</h3>
+      <p>
+        Bird migration is a story of adaptation, purpose, and resilience.  
+        Each migration reason, whether driven by climate, feeding, breeding, or survival, shapes how species move across the globe.  
+        Environmental pressures like climate change encourage longer, more collective, and geographically broad migrations,  
+        while biological needs such as breeding and predator avoidance favour shorter, localised journeys.  
+        Together, these patterns reveal how deeply migration behaviour reflects the challenges and rhythms of the natural world.   
+        This showcases birds’ remarkable ability to balance endurance, cooperation, and precision in their flight across continents.
       </p>
     </div>
 
