--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
 
     <footer>
       <strong>Data source:</strong> https://www.kaggle.com/datasets/sahirmaharajj/bird-migration-dataset-data-visualization-eda |
-      <strong>Story & Visualisation:</strong> Srividya Bobba |
-      <strong>Projection:</strong> Equal Earth
+      <strong>Author:</strong> Srividya Bobba |
+      <strong>Date:</strong> 10/10/2025
     </footer>
 
   </div>
