made changes to the following files:   modified:   flowmap.json   modified:   index.html

--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
     </h2>
 
     <p>
-      Birds migrate for powerful reasons. To breed, to feed, to escape danger, or to follow the shifting seasons.  
-      Each reason drives a different kind of journey, shaping how far, how long, and with whom these creatures travel.  
-      This visual story explores how the <strong>motives behind migration</strong> influence the patterns we see in the skies.
+      Birds embark on migrations for a variety of compelling reasons: to breed, to find food, to avoid predators, or to follow seasonal changes. 
+      Each motivation shapes a unique journey, influencing how far and how long birds travel, as well as whether they move alone or in flocks. 
+      This visual story uncovers how these <strong>migration motives</strong> drive the patterns and strategies we observe across species and regions.
     </p>
 
     <h3>Global Migration Routes</h3>
